<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">HearingAssist</string>
    <string name="sound_control">Sound Control</string>
    <string name="hearing_check">Hearing Check</string>
    <string name="tab_text_Mode">Mode</string>
    <string name="tab_text_Volume">Volume</string>
    <string name="tab_text_Band">Band</string>
    <string name="tab_text_Loud">Loud</string>
    <string name="tab_text_Focus">Focus</string>
    <string name="tab_text_Noise">Noise</string>

    <!-- Sound Control -->
    <string name="HearingModes">Hearing Modes</string>
    <string name="Conversation">Conversation</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Outdoor">Outdoor</string>
    <string name="Music">Music</string>
    <string name="tips_content_0">Conversation:Low Noisy Scenario</string>
    <string name="tips_content_1">These modes are suggestions based on most users needs within these particular environments. The best practice is to use all programs to discover the one that suits your personal needs best.</string>
    <string name="tips_content_2">If both Left and Rioght devices are connected, Mode adiustments will control both devices</string>

    <!-- First Activity -->
    <!-- Home Fragment -->
    <string name="user_guide_video">User Guide Video</string>
    <string name="not_connected">Not connected</string>
    <string name="HA_connected_L">HA-Connect-L</string>
    <string name="HA_connected_R">HA-Connect-R</string>

    <string name="Theme">Theme</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="Auto">Auto(according to OS)</string>

    <string name="Help">Help</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>

    <!-- Connect Fragment -->
    <string name="Device">Device</string>
    <string name="search_for_a_device">Search for a Device</string>
    <string name="no_devices_found">No devices found</string>
    <string name="tips_devices_tune_on">Make sure your Hearing Devices are tuned on</string>
    <string name="tap_to_connect">Tap to Connect</string>
    <string name="personalize_my_device">Personalize My Device</string>
    <string name="my_device">My Device</string>
    <string name="bluetooth_permission">need your Bluetooth/Location Permission to set you hearing-aid!</string>
    <string name="tips_bt_permission_system_settings">Please enable Bluetooth/Location Permission in system Settings, otherwise APP functions cannot be used normally!</string>
    <string name="bt_scanning">Scanning</string>
    <string name="loc_service_permisson">Location Disable</string>
    <string name="tips_loc_service_permisson">Please turn on your location service, otherwise APP will not be able to use bluetooth!</string>

    <string name="dialog_device_placeholder">Right Ear: G.SoundBuds-L(232E)</string>
    <string name="rename_device">Rename Device</string>
    <string name="remove_device">Remove Device</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>


    <string name="Connected">Connected</string>
    <string name="Connecting">Connecting</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Disconnecting">Disconnecting</string>
    <string name="Connect_Error">Connect Error</string>
    <string name="connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="delete">Delete</string>


    <string name="tips_bluetooth_permission">No bluetooth permission granted, the program cannot work!</string>
    <string name="tips_open_bt">Please turn on the bluetooth switch!</string>
    <string name="tips_connect_same_type">Please connect the same type of device!</string>
    <string name="tips_not_scanned_device">The Device is not scanned, please rescan it!</string>

    <string name="title_activity_first">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>