<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="SpUsage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_dialog"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/dialog_device_placeholder"
            android:textColor="@color/gray_tv_sub_title"
            android:textSize="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_tv_sub_title"/>
        <TextView
            android:id="@+id/tv_dialog_disconnect"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/Disconnect"
            android:textColor="@color/black_toolbar_title"
            android:textSize="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_tv_sub_title"/>
        <TextView
            android:id="@+id/tv_dialog_rename"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/rename_device"
            android:textColor="@color/black_toolbar_title"
            android:textSize="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_tv_sub_title"/>
        <TextView
            android:id="@+id/tv_dialog_remove"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/remove_device"
            android:textColor="@color/red_C7"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:background="@drawable/shape_dialog"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/red_C7"
        android:textSize="16dp" />

</LinearLayout>

