<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/loc_service_permisson"
            android:visibility="visible"
            android:textColor="@color/black_toolbar_title"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/tv_title"
            android:layout_alignParentLeft="true"
            android:lines="6"
            android:text="@string/tips_loc_service_permisson"
            android:visibility="visible"
            android:textColor="@color/gray_tv_sub_title"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/image"
            android:src="@null"
            android:layout_gravity="center"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/MyButtonDialog2"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="@color/red_C7"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/MyButtonDialog1"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="13dp" />
    </RelativeLayout>
</RelativeLayout>
