<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:gravity="center_vertical"
        android:theme="@style/Theme.HearingAssist.AppBarOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_hearing_assist"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:textSize="14dp"
        android:textColor="@color/gray_tv_sub_title"
        android:text="@string/Theme"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_light"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_menu_light"/>
        <TextView
            android:id="@+id/tv_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:textSize="16dp"
            android:textColor="@color/red_C7"
            android:text="@string/Light"/>
        <ImageView
            android:id="@+id/iv_light"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_selected"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_dark"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_menu_dark"/>
        <TextView
            android:id="@+id/tv_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:textSize="16dp"
            android:textColor="@color/black_toolbar_title"
            android:text="@string/Dark"/>
        <ImageView
            android:visibility="invisible"
            android:id="@+id/iv_dark"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_selected"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_auto"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_menu_auto"/>
        <TextView
            android:id="@+id/tv_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:textSize="16dp"
            android:textColor="@color/black_toolbar_title"
            android:text="@string/Auto"/>
        <ImageView
            android:visibility="invisible"
            android:id="@+id/iv_auto"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_selected"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="33dp"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_video"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_menu_video"/>
        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:textColor="@color/black_toolbar_title"
            android:text="@string/user_guide_video"/>
        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_next"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_help"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_menu_help"/>
        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:textColor="@color/black_toolbar_title"
            android:text="@string/Help"/>
        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_next"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_settings"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_menu_settings"/>
        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="58dp"
            android:textSize="16dp"
            android:textColor="@color/black_toolbar_title"
            android:text="@string/Settings"/>
        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_next"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

    <RelativeLayout
        android:id="@+id/layout_menu_about"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_menu_about"/>
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="58dp"
            android:text="@string/About"
            android:textColor="@color/black_toolbar_title"
            android:textSize="16dp" />
        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_menu_next" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_tv_sub_title"/>

</LinearLayout>